# a-u.supply

./: .gitignore  .prettierrc  CHECKS  CLAUDE.md  DESIGN.md  Dockerfile  Procfile  README.md  SEARCH-ENGINE-DESIGN.md  admin_api.py  app.json  astro.config.mjs  auth.py  bookmarks_api.py  catalog.py  catalog_views.py  cli.py  extraction.py  jobs_api.py  main.py  manage.py  models.py  package-lock.json  package.json  pyproject.toml  reset_db.py  search_api.py  search_client.py  seed_catalog.py  slack_scraper.py  worker.py
.claude/: settings.json
.claude/hooks/: block-master-commit.sh
.github/workflows/: create-user.yml  deploy.yml  seed-catalog.yml  setup-legacy.yml  setup-storage.yml
apps/: rottengenizdat-recipes.toml  rottengenizdat.toml  sparagmos.toml
scripts/: create-user.sh
src/components/: Player.svelte
src/layouts/: Admin.astro  Base.astro
src/lib/: encrypt.ts
src/pages/: channels.astro  entities.astro  index.astro  infrastructure.astro  login.astro  personnel.astro  profile.astro
src/pages/admin/: api-keys.astro  bookmarks.astro  dashboard.astro  files.astro  hecatomb.astro  settings.astro
src/pages/admin/catalog/: edit.astro  index.astro  new.astro
src/pages/admin/jobs/: detail.astro  index.astro
src/pages/admin/search/: detail.astro  failures.astro  index.astro  midden.astro  nomenclator.astro  slop.astro  triage.astro  upload.astro  workspace.astro
src/pages/catalog/: index.astro  release.astro
src/styles/: admin.css  global.css
static/: style.css
templates/: base.html  catalog.html  index.html  release.html
tests/: conftest.py  test_auth.py  test_dedup.py  test_extraction.py  test_midden.py  test_models.py  test_search_api.py  test_slack_scraper.py  test_tags.py
