[project]
name = "au-supply"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "bcrypt==4.0.1",
    "Jinja2>=3.1.0",
    "passlib[bcrypt]>=1.7.4",
    "Pillow>=11.0.0",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]
