[project]
name = "au-supply"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.135.3",
    "bcrypt==4.0.1",
    "faster-whisper>=1.1.0",
    "meilisearch>=0.31.0",
    "passlib[bcrypt]>=1.7.4",
    "Pillow>=11.0.0",
    "pytesseract>=0.3.10",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.5.0",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
    "yt-dlp>=2025.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
